# project_BenediktTrenz_JakobHellmuth

./: CMakeLists.txt  Programmentwurf.c  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
Project/: CMakeLists.txt
Project/include/: developer.h  developer_group.h
Project/src/: developer.c  developer_group.c  main  main.c
project_info_II/: CMakeLists.txt  run_cmake.sh
project_info_II/include/: developer.hpp
project_info_II/src/: developer.cpp  main.cpp
project_info_II/test/: test_developer.cpp
